turn_lexer_derive/test/test04-reject_data_enum.stderr
error: Enum item One must not contain data fields.
 --> $DIR/test04-reject_data_enum.rs:7:5
  |
7 |     One(i32),
  |     ^^^

error: Enum item Two must not contain data fields.
  --> $DIR/test04-reject_data_enum.rs:18:5
   |
18 |     Two{two: bool},
   |     ^^^
